--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Remote API
   connectivity: ^3.0.6
   http: ^0.13.3
+  internet_connection_checker: ^0.0.1+1
   # Local cache
   shared_preferences: ^2.0.6
 
