--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   internet_connection_checker: ^0.0.1+1
   # Local cache
   shared_preferences: ^2.0.6
+  # bloc_test
+  bloc_test: ^8.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
