--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   bloc_test: ^8.0.1
   # shimmer
   shimmer: ^2.0.0
+  # video player
+  video_player: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
